# scrapperd

./: .gitignore  README.md  meson.build  meson.options
report/: .gitignore  compile  report.md
src/: application.vala  bcproto.vala  bucket.h  bucket.vapi  buckets.vala  connection.vala  dbuspeer.vala  dhprotc.c  dhprotc.h  dhprotc.vapi  dhproto.vala  gcrypt.vapi  gcryptapi.h  gcrypterror.vala  hub.vala  instance.vala  instanceclass.vapi  key.vala  keytype.h  keytypes.h  keyval.h  keyval.vapi  krypt.vala  meson.build  networkhub.vala  node.vala  nodeskeleton.vala  peer.vala  peerimpl.vala  peerimplproxy.vala  refs.vala  rpccall.h  rpccall.vapi  runner.h  runner.vala  runner.vapi  value.vala  valuenode.vala  valuenodeskeleton.vala  valuepeer.vala  (+2 more)
src/advertise/: channel.vala  clock.vala  hub.vala  ipv4channel.h  ipv4channel.vala  meson.build  netifaces-unix.c  netifaces-win32.c  netifaces.c  netifaces.h  netifaces.vapi  peeker.vala  protocol.vala
src/application/: application.vala  meson.build  protocol.vala
src/gvalr/: meson.build  nat2net.vala  net2nat.vala  netnat.vala
src/infrastructure/: bridge.vala  dbus.vala  instance.vala  meson.build  node.vala
src/kademlia/: bucket.h  bucket.vapi  buckets.vala  crawler.vala  insertvalue.vala  key.vala  keyval.h  keyval.vapi  lookupnode.vala  lookupvalue.vala  meson.build  peer.vala  valuepeer.vala  valuestore.vala
src/kademlia_ad/: join.vala  meson.build  protocol.vala
src/kademlia_dbus/: clock.vala  hub.vala  meson.build  networkhub.vala  nodeskeleton.vala  peerimpl.vala  peerimplproxy.vala  refs.vala
src/krypt/: bcproto.vala  dhproto.vala  gcryptapi.c  meson.build
src/scrapper/: application.vala  instance.vala  linksearcher.vala  meson.build  scrapper.vala  store.vala  validuri.h
src/storage/: application.vala  bucket.c  bucket.h  instance.vala  kademlia.h  kademlia.vapi  key.c  key.h  meson.build  node.c  node.h  node.signals  node.vala  nodeskeleton.vala  peer.vala  storage.vala  store.vala  value.c  value.h
src/tests/: advertise.vala  base.vala  baseintegration.vala  bcproto.vala  buckets.vala  dhproto.vala  hub.vala  integration.vala  key.vala  krypt.vala  meson.build  peer.vala  stress.vala  valuepeer.vala
src/vapi/: config.vapi
src/viewer/: adrow.ui  adrow.vala  application.vala  applicationmenus.ui  applicationwindow.ui  applicationwindow.vala  infobar.ui  infobar.vala  infobarmessage.ui  infobarmessage.vala  joindialog.ui  joindialog.vala  meson.build  resources.xml  role.vala  rolerow.ui  rolerow.vala  rolesource.vala  roletarget.vala  roletransport.vala  styles.css
